# squad-config-validator

./: .gitignore  README.md  deploy.sh  main.py  pyproject.toml  setup-pypi-token.sh  setup.py
