[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squad-config-validator"
version = "1.0.0"
description = "Validate squad agent configurations — ensure all agents have correct setup"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "OpenSeneca"},
]
urls = {Homepage = "https://github.com/OpenSeneca/squad-config-validator"}

dependencies = [
    "paramiko>=2.0.0",
]

[project.scripts]
validate-agent = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
