[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squad-config-validator"
version = "1.0.0"
description = "Validate squad agent configurations — ensure all agents have correct setup"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "OpenSeneca"},
]
urls = {Homepage = "https://github.com/OpenSeneca/squad-config-validator"}
dependencies = [
    "paramiko>=2.0.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
validate-agent = "main:main"

[tool.setuptools]
py-modules = ["main"]
